--- a/todo
+++ b/todo
@@ -2,3 +2,4 @@
 2. spawn processes for all events
 3. print views in 2.1M form.
 4. add status tracking to calc overall profit/loss
+5. Currently prompts are are same in constants.py
